# calculator-

./: """Command-line calculator package."""  from .calculator import CalculatorError, evaluate, run_operation  __all__ = ["CalculatorError", "evaluate", "run_operation"]  README.md  pyproject.toml
src/cli_calculator/: cli.py
src/cli_calculator/src/cli_calculator/: calculator.py
src/cli_calculator/tests/: README.md  test_calculator.py
src/cli_calculator/tests/src/cli_calculator/: calculator.py
