[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-calculator"
version = "1.0.0"
description = "A safe, interactive command-line calculator written in Python."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Sameer Achara" }
]
license = { text = "MIT" }
keywords = ["calculator", "cli", "terminal", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Utilities"
]

[project.scripts]
cli-calculator = "cli_calculator.cli:main"
calculator = "cli_calculator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
